# FPGA-Implementation-of-STOMP-in-Robotics

./: CMakeLists.txt  LICENSE  README.md  package.xml
Report/cost_smooth/MMul/do-test_report_report/: area.json  area_src.json  block.json  bottleneck.json  gmv.json  info.json  lmv.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  quartus.json  schedule.json  summary.json  tree.json
build_deltatheta/: CMakeCache.txt  Makefile  cmake_install.cmake  do-test-deltatheta.fpga_emu
build_deltatheta/src/: Makefile
config/: joint_position_controller.yaml
description/: robot.urdf.xacro  robot_core.xacro
include/stomp/: simple_optimization_task.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/FPGA-Implementation-of-STOMP-in-Robotics/share/FPGA-Implementation-of-STOMP-in-Robotics/: package.bash  package.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/cpp_srvcli/lib/cpp_srvcli/: server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cpp_srvcli/share/cpp_srvcli/cmake/: cpp_srvcliConfig-version.cmake  cpp_srvcliConfig.cmake
install/cpp_srvcli/share/cpp_srvcli/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/: local_setup.sh  package.sh  package.xml
install/my_bot/share/my_bot/worlds/: empty.world
install/ros-sycl-test/share/ros-sycl-test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros-sycl-test/share/ros-sycl-test/cmake/: ros-sycl-testConfig-version.cmake  ros-sycl-testConfig.cmake
install/ros-sycl-test/share/ros-sycl-test/environment/: ament_prefix_path.dsv  path.dsv
install/sycl_fpga_kernel/lib/sycl_fpga_kernel/: talker
install/sycl_fpga_kernel/share/sycl_fpga_kernel/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sycl_fpga_kernel/share/sycl_fpga_kernel/environment/: ament_prefix_path.sh  path.sh
install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
launch/: launch_sim.launch.py  rsp.launch.py
log/: latest_build  latest_list
src/: CMakeLists.txt  CostFunction.cpp  CostFunction.h  CostSmooth.hpp  Delta_Theta_Block.hpp  Determination.hpp  RNG.hpp  joint_command.cpp  main.cpp  main_backup.cpp  rng_test.cpp  stomp.cpp  stomp_example.cpp  test_cost_delta_theta.cpp  test_cost_function.cpp  test_cost_smooth.cpp  test_delta_theta_block.cpp  test_determination.cpp  test_whole_1_iteration.cpp  vector-add-buffers.cpp  vector-add-usm.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/include/cpp_pubsub/: autorun.hpp
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: CMakeLists.txt
src/my_bot/: CMakeLists.txt
src/my_bot/config/: joint_position_controller.yaml  my_bot.rviz
src/my_bot/description/: robot.urdf.xacro
src/my_bot/launch/: launch_sim.launch.py
src/my_bot/src/: joint_command.cpp  test.cpp
src/ros-sycl-test/: CMakeLists.txt
src/sycl_fpga_kernel/: CMakeLists.txt  package.xml
src/sycl_fpga_kernel/include/cpp_pubsub/: pipe_utils.hpp
src/sycl_fpga_kernel/src/: Adder_Tree.cpp  Adder_Tree.h  CostFunction.cpp  CostFunction.h  Delta_Theta_Block.hpp  RNG.hpp  metaprogramming_utils.hpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/tutorial_interfaces/: CMakeLists.txt
worlds/: empty.world
(+8 files in other folders)
